Fix Telegram MarkdownV2 escape

--- a/.env.example
+++ b/.env.example
@@ -11,11 +11,17 @@ KEYWORDS=
 # Cấu hình kiểm tra (mili giây)
 CHECK_INTERVAL=300000
 
-# Cấu hình Email
+# === TELEGRAM (khuyến nghị cho Railway) ===
+# Tạo bot: Chat với @BotFather trên Telegram, gõ /newbot
+# Lấy Chat ID: Chat với @userinfobot
+TELEGRAM_BOT_TOKEN=your_bot_token_here
+TELEGRAM_CHAT_ID=your_chat_id_here
+
+# === EMAIL (optional, không hoạt động trên Railway) ===
 EMAIL_SERVICE=gmail
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASSWORD=your_app_password_here
-NOTIFY_EMAIL=your_email@gmail.com
+EMAIL_USER=
+EMAIL_PASSWORD=
+NOTIFY_EMAIL=
 
 # Cấu hình Browser
 HEADLESS=true
