[ADD] multi bot

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,29 @@
 # Cấu hình Chợ Tốt
 CATEGORY_URL=https://www.chotot.com/mua-ban-dien-thoai-ha-noi
-REGION=ha-noi
-MIN_PRICE=10000000
-MAX_PRICE=80000000
-
-# Từ khóa lọc (cách nhau bởi dấu phẩy, để trống để bỏ qua)
-# Ví dụ: iphone 14,iphone 15,samsung s23
-KEYWORDS=
 
 # Cấu hình kiểm tra (mili giây)
 CHECK_INTERVAL=300000
 
-# === TELEGRAM (khuyến nghị cho Railway) ===
-# Tạo bot: Chat với @BotFather trên Telegram, gõ /newbot
-# Lấy Chat ID: Chat với @userinfobot
-TELEGRAM_BOT_TOKEN=your_bot_token_here
-TELEGRAM_CHAT_ID=your_chat_id_here
+# === TELEGRAM BOTS ===
+# Format: tên_bot|bot_token|chat_id
+# Nhiều bot cách nhau bởi dấu chấm phẩy (;)
+# Ví dụ: main|123456789:ABCdefGHI|987654321
+TELEGRAM_BOTS=main|YOUR_BOT_TOKEN|YOUR_CHAT_ID
+
+# === TRACKING GROUPS ===
+# Format: tên_group|keyword1,keyword2|giá_min|giá_max|bot1,bot2
+# Nhiều group cách nhau bởi dấu chấm phẩy (;)
+#
+# Ví dụ tracking iPhone 12 với giá 10-12 triệu, gửi đến bot "main":
+# iphone12|iphone 12,ip 12|10000000|12000000|main
+#
+# Ví dụ tracking iPhone XS Max và XR với giá 3-3.5 triệu:
+# iphonex|xsm,xs max,xr|3000000|3500000|main
+#
+# Kết hợp nhiều group:
+# TRACKING_GROUPS=iphone12|iphone 12,ip 12|10000000|12000000|main;iphonex|xsm,xs max,xr|3000000|3500000|main
+
+TRACKING_GROUPS=iphone12|iphone 12,ip 12|10000000|12000000|main;iphonex|xsm,xs max,xr|3000000|3500000|main
 
 # === EMAIL (optional, không hoạt động trên Railway) ===
 EMAIL_SERVICE=gmail
